<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbridge_test</name>
  <version>0.0.1</version>
  <description>rosbridge bug reproducer</description>
  <maintainer email="daisukes@cmu.edu">Daisuke Sato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
